Estructura del Banner

--- a/index.html
+++ b/index.html
@@ -9,23 +9,39 @@
     </head>
 
     <body>
+        <!-- Cabecera (logo y menu)-->
         <header class="header">
             <div>
                 <a href="/">
                     <img src="/img/logo.png" alt="Logo Easy Code">
                 </a>
-            <nav>
-                <ul>
-                    <li><a href="/">Inicio</a></li>
-                    <li><a href="/nosotros.html">¿Quienes Somos?</a></li>
-                    <li><a href="/proyectos.html">Proyectos</a></li>
-                    <li><a href="/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
+                <nav>
+                    <ul>
+                        <li><a href="/">Inicio</a></li>
+                        <li><a href="/nosotros.html">¿Quienes Somos?</a></li>
+                        <li><a href="/proyectos.html">Proyectos</a></li>
+                        <li><a href="/contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
             </div>
         </header>
+        <!-- Main (Contenido Principal)-->
         <main class="main">
-
+            <!--Banner-->
+            <div class="main-banner">
+                <div>
+                    <div class="main-banner-presentacion">
+                        <h1>Bienvenidos a Easy Code</h1>
+                        <p>Necesitas asesoramiento urgente? Nosotros te podemos ayudar en la construccion de tu sitio web.</p>
+                        <div class="main banner-presentacion-buttons">
+                            <a href="/contacto.html">Escribenos ya mismo!</a>
+                        </div>
+                    </div>
+                    <div class="main-banner-img">
+                        <img src="/img/about-us.png" alt="Imagen Easy Code">
+                    </div>
+                </div>
+            </div>
         </main>
         <footer class="footer">
 
