Estructura de servicios

--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
         <!-- Main (Contenido Principal)-->
         <main class="main">
             <!--Banner-->
-            <div class="main-banner">
+            <section class="main-banner">
                 <div>
                     <div class="main-banner-presentacion">
                         <h1>Bienvenidos a Easy Code</h1>
-                        <p>Necesitas asesoramiento urgente? Nosotros te podemos ayudar en la construccion de tu sitio web.</p>
+                        <p>Necesitas asesoramiento urgente? Nosotros te podemos ayudar en la construccion de tu sitio
+                            web.</p>
                         <div class="main banner-presentacion-buttons">
                             <a href="/contacto.html">Escribenos ya mismo!</a>
                         </div>
@@ -41,7 +42,30 @@
                         <img src="/img/about-us.png" alt="Imagen Easy Code">
                     </div>
                 </div>
-            </div>
+            </section>
+            <!--Servicios-->
+            <section class="main-servicios">
+                <div>
+                    <h2>Nuestros Servicios</h2>
+                    <div class="main-servicios-content">
+                        <article class="main-servicios-content-servicio">
+                            <span></span>
+                            <h3>Servicio 1</h3>
+                            <p>Texto explicativo referente al servicio 1</p>
+                        </article>
+                        <article class="main-servicios-content-servicio">
+                            <span></span>
+                            <h3>Servicio 2</h3>
+                            <p>Texto explicativo referente al servicio 2</p>
+                        </article>
+                        <article class="main-servicios-content-servicio">
+                            <span></span>
+                            <h3>Servicio 3</h3>
+                            <p>Texto explicativo referente al servicio 3</p>
+                        </article>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 
