Estructura Sobre nosotros

--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
                     </div>
                 </div>
             </section>
+            <!-- Sobre nosotros-->
+            <section class="main-nosotros">
+                <div>
+                    <h2>Sobre nosotros</h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum qui ipsa ducimus aliquam voluptas.
+                    </p>
+                    <a href="/proyectos.html">Ver Experencia</a>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 
