--- a/index.html
+++ b/index.html
@@ -76,6 +76,44 @@
                     <a href="/proyectos.html">Ver Experencia</a>
                 </div>
             </section>
+            <!--Proyectos-->
+            <section class="main-proyectos">
+                <h2>Ultimos proyectos</h2>
+                <div class="main-proyectos-content">
+                    <a href="#">
+                        <article class="main-proyectos-content-proyecto">
+                            <div>
+                                <h4>Titulo Proyecto 1</h4>
+                                <p>Texto explicativo referente al proyecto 1</p>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="main-proyectos-content-proyecto">
+                            <div>
+                                <h4>Titulo Proyecto 2</h4>
+                                <p>Texto explicativo referente al proyecto 2</p>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="main-proyectos-content-proyecto">
+                            <div>
+                                <h4>Titulo Proyecto 3</h4>
+                                <p>Texto explicativo referente al proyecto 3</p>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="main-proyectos-content-proyecto">
+                            <div>
+                                <h4>Titulo Proyecto 4</h4>
+                                <p>Texto explicativo referente al proyecto 4</p>
+                            </div>
+                        </article>
+                    </a>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 
