Estructura trabaja con nosotros

--- a/index.html
+++ b/index.html
@@ -114,6 +114,21 @@
                     </a>
                 </div>
             </section>
+            <!--Trabaja con nosotros-->
+            <section class="main-trabaja">
+                <div>
+                    <h2>¿Quieres trabajar con nosotros?</h2>
+                    <p>Es el momento de convertir tu idea en algo real. Puedes contactarnos en nuestro correo
+                        electronico.</p>
+                    <a href="mailto:contacto@easycode.com">contacto@easycode.com</a>
+                    <div>
+                        <a href="#"><span></span></a>
+                        <a href="#"><span></span></a>
+                        <a href="#"><span></span></a>
+                        <a href="#"><span></span></a>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 
