--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <!-- Cabecera (logo y menu)-->
+        <!-- Header (logo y menu)-->
         <header class="header">
             <div>
                 <a href="/">
@@ -122,16 +122,17 @@
                         electronico.</p>
                     <a href="mailto:contacto@easycode.com">contacto@easycode.com</a>
                     <div>
-                        <a href="#"><span></span></a>
-                        <a href="#"><span></span></a>
-                        <a href="#"><span></span></a>
-                        <a href="#"><span></span></a>
+                        <a href="#" target="_blank"><span></span></a>
+                        <a href="#" target="_blank"><span></span></a>
+                        <a href="#" target="_blank"><span></span></a>
+                        <a href="#" target="_blank"><span></span></a>
                     </div>
                 </div>
             </section>
         </main>
+        <!--Footer-->
         <footer class="footer">
-
+            <p>Todos los derechos reservados 2020 | Easy Code Tech.</p>
         </footer>
     </body>
 
