--- a/index.html
+++ b/index.html
@@ -7,123 +7,132 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Normalize CSS-->
         <link rel="stylesheet" href="/css/normalize.css">
+        <!--My Styles CSS-->
+        <link rel="stylesheet" href="css/main.css">
         <title>Easy Code</title>
     </head>
 
     <body>
         <!-- Header (logo y menu)-->
         <header class="header">
-            <div>
-                <a href="/">
-                    <img src="/assets/img/logo.png" alt="Logo Easy Code">
-                </a>
-                <nav>
-                    <ul>
-                        <li><a href="/">Inicio</a></li>
-                        <li><a href="/nosotros.html">¿Quienes Somos?</a></li>
-                        <li><a href="/proyectos.html">Proyectos</a></li>
-                        <li><a href="/contacto.html">Contacto</a></li>
+            <div class="nav container">
+                <a href="/" class="nav-logo">Easy Code</a>
+                <nav class="nav-menu" id="nav-menu">
+                    <ul class="nav-list grid">
+                        <li class="nav-item"><a class="nav-link active-link" href="/">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/nosotros.html">¿Quienes Somos?</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/proyectos.html">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/contacto.html">Contacto</a></li>
                     </ul>
+                 
                 </nav>
+                <div class="nav-btns">
+                    <div class="nav-toggle" id="nav-toggle">
+                        Menu <img src="/assets/icons/menu.svg" alt="Show menu">
+                    </div>
+                </div>
             </div>
         </header>
         <!-- Main (Contenido Principal)-->
         <main class="main">
             <!--Banner-->
-            <section class="main-banner">
-                <div>
-                    <div class="main-banner-presentacion">
-                        <h1>Bienvenidos a Easy Code</h1>
-                        <p>Necesitas asesoramiento urgente? Nosotros te podemos ayudar en la construccion de tu sitio
+            <section class="banner section">
+                <div class="banner-content container grid">
+                    <div class="banner">
+                        <h1 class="banner-title">Bienvenidos a Easy Code</h1>
+                        <p class="banner-description"> Necesitas asesoramiento urgente? Nosotros te podemos ayudar en la
+                            construccion de tu sitio
                             web.</p>
-                        <div class="main banner-presentacion-buttons">
-                            <a href="/contacto.html">Escribenos ya mismo!</a>
+                        <div>
+                            <a class="button button-white" href="/contacto.html">Escribenos ya mismo!</a>
                         </div>
                     </div>
-                    <div class="main-banner-img">
-                        <img src="/assets/img/about-us.png" alt="Imagen Easy Code">
+                    <div>
+                        <img class="banner-img" src="/assets/img/about-us.png" alt="Imagen Easy Code">
                     </div>
                 </div>
             </section>
             <!--Servicios-->
-            <section class="main-servicios">
-                <div>
-                    <h2>Nuestros Servicios</h2>
-                    <div class="main-servicios-content">
-                        <article class="main-servicios-content-servicio">
-                            <span></span>
-                            <h3>Servicio 1</h3>
+            <section class="servicios section">
+                <div class="container">
+                    <h2 class="section-title">Nuestros Servicios</h2>
+                    <div class="servicios-content grid">
+                        <article class="servicios-content-servicio">
+                            <img class="servicio-icono" src="/assets/icons/phone.svg" alt="Icono servicio 1">
+                            <h3 class="servicio-title">Servicio 1</h3>
                             <p>Texto explicativo referente al servicio 1</p>
                         </article>
-                        <article class="main-servicios-content-servicio">
-                            <span></span>
-                            <h3>Servicio 2</h3>
+                        <article class="servicios-content-servicio">
+                            <img class="servicio-icono" src="/assets/icons/computer.svg" alt="Icono servicio 2">
+                            <h3 class="servicio-title">Servicio 2</h3>
                             <p>Texto explicativo referente al servicio 2</p>
                         </article>
-                        <article class="main-servicios-content-servicio">
-                            <span></span>
-                            <h3>Servicio 3</h3>
+                        <article class="servicios-content-servicio">
+                            <img class="servicio-icono" src="/assets/icons/keyboard.svg" alt="Icono servicio 3">
+                            <h3 class="servicio-title">Servicio 3</h3>
                             <p>Texto explicativo referente al servicio 3</p>
                         </article>
                     </div>
                 </div>
             </section>
             <!-- Sobre nosotros-->
-            <section class="main-nosotros">
-                <div>
-                    <h2>Sobre nosotros</h2>
+            <section class="nosotros section">
+                <div class="nosotros-content container grid">
+                    <h2 class="section-title">Sobre nosotros</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum qui ipsa ducimus aliquam voluptas.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat impedit neque dolorum dolore,
+                        quisquam totam, vero dolor, mollitia quis in placeat consectetur deleniti aspernatur reiciendis.
+                        Minima aspernatur soluta modi architecto?
                     </p>
-                    <a href="/proyectos.html">Ver Experencia</a>
+                    <div>
+                        <a class="button button-white" href="/proyectos.html">Ver Experencia</a>
+                    </div>
                 </div>
             </section>
             <!--Proyectos-->
-            <section class="main-proyectos">
-                <h2>Ultimos proyectos</h2>
-                <div class="main-proyectos-content">
-                    <a href="#">
-                        <article class="main-proyectos-content-proyecto">
-                            <div>
-                                <h4>Titulo Proyecto 1</h4>
-                                <p>Texto explicativo referente al proyecto 1</p>
-                            </div>
-                        </article>
-                    </a>
-                    <a href="#">
-                        <article class="main-proyectos-content-proyecto">
-                            <div>
-                                <h4>Titulo Proyecto 2</h4>
-                                <p>Texto explicativo referente al proyecto 2</p>
-                            </div>
-                        </article>
-                    </a>
-                    <a href="#">
-                        <article class="main-proyectos-content-proyecto">
-                            <div>
-                                <h4>Titulo Proyecto 3</h4>
-                                <p>Texto explicativo referente al proyecto 3</p>
-                            </div>
-                        </article>
-                    </a>
-                    <a href="#">
-                        <article class="main-proyectos-content-proyecto">
-                            <div>
-                                <h4>Titulo Proyecto 4</h4>
-                                <p>Texto explicativo referente al proyecto 4</p>
-                            </div>
-                        </article>
-                    </a>
+            <section class="proyectos section">
+                <h2 class="section-title">Ultimos proyectos</h2>
+                <div class="proyectos-content container grid">
+                    <article class="proyectos-content-proyecto ">
+                        <div>
+                            <img src="/assets/img/nosotros.jpg" alt="Proyecto 1">
+                            <h4 class="proyecto-title">Titulo Proyecto 1</h4>
+                            <p>Texto explicativo referente al proyecto 1</p>
+                        </div>
+                    </article>
+                    <article class="proyectos-content-proyecto">
+                        <div>
+                            <img src="/assets/img/nosotros.jpg" alt="Proyecto 2">
+                            <h4 class="proyecto-title">Titulo Proyecto 2</h4>
+                            <p>Texto explicativo referente al proyecto 2</p>
+                        </div>
+                    </article>
+                    <article class="proyectos-content-proyecto">
+                        <div>
+                            <img src="/assets/img/nosotros.jpg" alt="Proyecto 3">
+                            <h4 class="proyecto-title">Titulo Proyecto 3</h4>
+                            <p>Texto explicativo referente al proyecto 3</p>
+                        </div>
+                    </article>
+                    <article class="proyectos-content-proyecto">
+                        <div>
+                            <img src="/assets/img/nosotros.jpg" alt="Proyecto 4">
+                            <h4 class="proyecto-title">Titulo Proyecto 4</h4>
+                            <p>Texto explicativo referente al proyecto 4</p>
+                        </div>
+                    </article>
                 </div>
             </section>
             <!--Trabaja con nosotros-->
-            <section class="main-trabaja">
-                <div>
-                    <h2>¿Quieres trabajar con nosotros?</h2>
+            <section class="trabaja section">
+                <div class="trabaja-content container grid">
+                    <h2 class="section-title">¿Quieres trabajar con nosotros?</h2>
                     <p>Es el momento de convertir tu idea en algo real. Puedes contactarnos en nuestro correo
                         electronico.</p>
-                    <a href="mailto:contacto@easycode.com">contacto@easycode.com</a>
-                    <div>
+                        <div>
+                    <a class="button" href="mailto:contacto@easycode.com">contacto@easycode.com</a>
+                        </div>
+                    <div class="trabaja-socials">
                         <a href="#" target="_blank"><img src="/assets/icons/facebook.svg" alt="Icono facebook"></a>
                         <a href="#" target="_blank"><img src="/assets/icons/twitter.svg" alt="Icono twitter"></a>
                         <a href="#" target="_blank"><img src="/assets/icons/whatsapp.svg" alt="Icono whatsapp"></a>
@@ -133,9 +142,11 @@
             </section>
         </main>
         <!--Footer-->
-        <footer class="footer">
-            <p>Todos los derechos reservados 2020 | Easy Code Tech.</p>
+        <footer class="footer container">
+            <p>Todos los derechos reservados   &#169; <span id="fecha"></span>  | Easy Code Tech.</p>
         </footer>
+
+        <script src="/js/main.js"></script>
     </body>
 
 </html>
