Creacion de paginas secundarias

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Normalize CSS-->
-        <link rel="stylesheet" href="/css/normalize.css">
+        <link rel="stylesheet" href="css/normalize.css">
         <!--My Styles CSS-->
         <link rel="stylesheet" href="css/main.css">
         <title>Easy Code</title>
@@ -16,19 +16,18 @@
         <!-- Header (logo y menu)-->
         <header class="header">
             <div class="nav container">
-                <a href="/" class="nav-logo">Easy Code</a>
+                <a href="index.html" class="nav-logo">Easy Code</a>
                 <nav class="nav-menu" id="nav-menu">
                     <ul class="nav-list grid">
-                        <li class="nav-item"><a class="nav-link active-link" href="/">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/nosotros.html">¿Quienes Somos?</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/proyectos.html">Proyectos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link active-link" href="index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="nosotros.html">¿Quienes Somos?</a></li>
+                        <li class="nav-item"><a class="nav-link" href="proyectos.html">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                     </ul>
-                 
                 </nav>
                 <div class="nav-btns">
                     <div class="nav-toggle" id="nav-toggle">
-                        Menu <img src="/assets/icons/menu.svg" alt="Show menu">
+                        Menu <img src="assets/icons/menu.svg" alt="Show menu">
                     </div>
                 </div>
             </div>
@@ -44,11 +43,11 @@
                             construccion de tu sitio
                             web.</p>
                         <div>
-                            <a class="button button-white" href="/contacto.html">Escribenos ya mismo!</a>
+                            <a class="button button-white" href="contacto.html">Escribenos ya mismo!</a>
                         </div>
                     </div>
                     <div>
-                        <img class="banner-img" src="/assets/img/about-us.png" alt="Imagen Easy Code">
+                        <img class="banner-img" src="assets/img/about-us.png" alt="Imagen Easy Code">
                     </div>
                 </div>
             </section>
@@ -58,17 +57,17 @@
                     <h2 class="section-title">Nuestros Servicios</h2>
                     <div class="servicios-content grid">
                         <article class="servicios-content-servicio">
-                            <img class="servicio-icono" src="/assets/icons/phone.svg" alt="Icono servicio 1">
+                            <img class="servicio-icono" src="assets/icons/phone.svg" alt="Icono servicio 1">
                             <h3 class="servicio-title">Servicio 1</h3>
                             <p>Texto explicativo referente al servicio 1</p>
                         </article>
                         <article class="servicios-content-servicio">
-                            <img class="servicio-icono" src="/assets/icons/computer.svg" alt="Icono servicio 2">
+                            <img class="servicio-icono" src="assets/icons/computer.svg" alt="Icono servicio 2">
                             <h3 class="servicio-title">Servicio 2</h3>
                             <p>Texto explicativo referente al servicio 2</p>
                         </article>
                         <article class="servicios-content-servicio">
-                            <img class="servicio-icono" src="/assets/icons/keyboard.svg" alt="Icono servicio 3">
+                            <img class="servicio-icono" src="assets/icons/keyboard.svg" alt="Icono servicio 3">
                             <h3 class="servicio-title">Servicio 3</h3>
                             <p>Texto explicativo referente al servicio 3</p>
                         </article>
@@ -95,28 +94,28 @@
                 <div class="proyectos-content container grid">
                     <article class="proyectos-content-proyecto ">
                         <div>
-                            <img src="/assets/img/nosotros.jpg" alt="Proyecto 1">
+                            <img src="assets/img/nosotros.jpg" alt="Proyecto 1">
                             <h4 class="proyecto-title">Titulo Proyecto 1</h4>
                             <p>Texto explicativo referente al proyecto 1</p>
                         </div>
                     </article>
                     <article class="proyectos-content-proyecto">
                         <div>
-                            <img src="/assets/img/nosotros.jpg" alt="Proyecto 2">
+                            <img src="assets/img/nosotros.jpg" alt="Proyecto 2">
                             <h4 class="proyecto-title">Titulo Proyecto 2</h4>
                             <p>Texto explicativo referente al proyecto 2</p>
                         </div>
                     </article>
                     <article class="proyectos-content-proyecto">
                         <div>
-                            <img src="/assets/img/nosotros.jpg" alt="Proyecto 3">
+                            <img src="assets/img/nosotros.jpg" alt="Proyecto 3">
                             <h4 class="proyecto-title">Titulo Proyecto 3</h4>
                             <p>Texto explicativo referente al proyecto 3</p>
                         </div>
                     </article>
                     <article class="proyectos-content-proyecto">
                         <div>
-                            <img src="/assets/img/nosotros.jpg" alt="Proyecto 4">
+                            <img src="assets/img/nosotros.jpg" alt="Proyecto 4">
                             <h4 class="proyecto-title">Titulo Proyecto 4</h4>
                             <p>Texto explicativo referente al proyecto 4</p>
                         </div>
@@ -133,10 +132,10 @@
                     <a class="button" href="mailto:contacto@easycode.com">contacto@easycode.com</a>
                         </div>
                     <div class="trabaja-socials">
-                        <a href="#" target="_blank"><img src="/assets/icons/facebook.svg" alt="Icono facebook"></a>
-                        <a href="#" target="_blank"><img src="/assets/icons/twitter.svg" alt="Icono twitter"></a>
-                        <a href="#" target="_blank"><img src="/assets/icons/whatsapp.svg" alt="Icono whatsapp"></a>
-                        <a href="#" target="_blank"><img src="/assets/icons/instagram.svg" alt="Icono instagram"></a>
+                        <a href="#" target="_blank"><img src="assets/icons/facebook.svg" alt="Icono facebook"></a>
+                        <a href="#" target="_blank"><img src="assets/icons/twitter.svg" alt="Icono twitter"></a>
+                        <a href="#" target="_blank"><img src="assets/icons/whatsapp.svg" alt="Icono whatsapp"></a>
+                        <a href="#" target="_blank"><img src="assets/icons/instagram.svg" alt="Icono instagram"></a>
                     </div>
                 </div>
             </section>
@@ -145,8 +144,7 @@
         <footer class="footer container">
             <p>Todos los derechos reservados   &#169; <span id="fecha"></span>  | Easy Code Tech.</p>
         </footer>
-
-        <script src="/js/main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 
 </html>
