Correcion fecha footer

--- a/contacto.html
+++ b/contacto.html
@@ -45,7 +45,7 @@
         <footer class="footer container">
             <p>Todos los derechos reservados &#169; <span id="fecha"></span> | Easy Code Tech.</p>
         </footer>
-        <script src="/js/main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 
 </html>
