Terminada pagina de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -38,6 +38,32 @@
                 <div class=" container">
                     <h2 class="section-title">Contacto</h2>
 
+                    <div class="contact-data grid">
+                        
+                        <div class="form">
+                            <iframe
+                                src="https://docs.google.com/forms/d/e/1FAIpQLSeJ-TCev53I0kE4xENyaV_1iu0bzo4SNIHAfbdYswq0PA1BqQ/viewform?embedded=true"
+                                width="100%" height="1000" frameborder="0" marginheight="0"
+                                marginwidth="0" scrolling="no" width="0">Cargando…</iframe>
+                        </div>
+
+                        <div >
+                            <h3 class="contact-data-title">Correo electrónico</h3>
+                            <span class="contact-data-info">contacto@easycode.com</span>
+                            <h3 class="contact-data-title">Llamanos</h3>
+                            <span class="contact-data-info">Whatsapp +57 300 3571943</span>
+                            <h3 class="contact-data-title">Horario</h3>
+                            <span class="contact-data-info">Lunes a viernes 9 am – 5 pm</span>
+                            <h3 class="contact-data-title">Ubicacion</h3>
+                            <span class="contact-data-info">Colombia - Magangué, Bolivar</span>
+                            <div class="mapa">
+                                <iframe width="100%" height="500" id="gmap_canvas"
+                                    src="https://maps.google.com/maps?q=magangue&t=&z=15&ie=UTF8&iwloc=&output=embed"
+                                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </section>
         </main>
