--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         Minima aspernatur soluta modi architecto?
                     </p>
                     <div>
-                        <a class="button button-white" href="/proyectos.html">Ver Experencia</a>
+                        <a class="button button-white" href="proyectos.html">Ver Experencia</a>
                     </div>
                 </div>
             </section>
