Terminada pagina de quienes somos

--- a/nosotros.html
+++ b/nosotros.html
@@ -20,7 +20,8 @@
                 <nav class="nav-menu" id="nav-menu">
                     <ul class="nav-list grid">
                         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link active-link" href="nosotros.html">¿Quienes Somos?</a></li>
+                        <li class="nav-item"><a class="nav-link active-link" href="nosotros.html">¿Quienes Somos?</a>
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="proyectos.html">Proyectos</a></li>
                         <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                     </ul>
@@ -34,21 +35,41 @@
         </header>
         <!-- Main (Contenido Principal)-->
         <main class="main">
-         <!-- Sobre nosotros-->
-         <section class=" section">
-            <div class=" container grid">
-                <h2 class="section-title">Sobre Nosotros</h2>
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat impedit neque dolorum dolore,
-                    quisquam totam, vero dolor, mollitia quis in placeat consectetur deleniti aspernatur reiciendis.
-                    Minima aspernatur soluta modi architecto?
-                </p>
-            </div>
-        </section>
+            <!-- Sobre nosotros-->
+            <section class=" section">
+                <div class=" container grid">
+                    <h2 class="section-title">Sobre Nosotros</h2>
+                    <div class="nosotros-main">
+                        <div class="nosotros-main-img">
+                            <img src="assets/img/nosotros.jpg" alt="">
+                        </div>
+                        <div class="nosotros-main-data">
+                            <h3>Misión</h3>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure id nobis sit voluptate optio,
+                                dolore sint nostrum sequi, non quo dolores quam voluptatibus, quae in ea at aut impedit nam.</p>
+                        </div>
+                        <div class="nosotros-main-data">
+                            <h3>Visión</h3>
+                            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure id nobis sit voluptate optio,
+                                dolore sint nostrum sequi, non quo dolores quam voluptatibus, quae in ea at aut impedit nam.</p>
+                        </div>
+                        <div class="nosotros-main-img">
+                            <img src="assets/img/nosotros.jpg" alt="">
+                        </div>
+                        <div class="nosotros-main-img">
+                            <img src="assets/img/nosotros.jpg" alt="">
+                        </div>
+                        <div class="nosotros-main-data">
+                            <h3>Historia</h3>
+                           <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure id nobis sit voluptate optio,
+                            dolore sint nostrum sequi, non quo dolores quam voluptatibus, quae in ea at aut impedit nam.</p>
+                        </div>
+                    </div>
+            </section>
         </main>
         <!--Footer-->
         <footer class="footer container">
-            <p>Todos los derechos reservados   &#169; <span id="fecha"></span>  | Easy Code Tech.</p>
+            <p>Todos los derechos reservados &#169; <span id="fecha"></span> | Easy Code Tech.</p>
         </footer>
         <script src="js/main.js"></script>
     </body>
