--- a/proyectos.html
+++ b/proyectos.html
@@ -37,40 +37,52 @@
             <!--Proyectos-->
             <section class="proyectos section">
                 <h2 class="section-title">Proyectos</h2>
-                <div class="proyectos-content container grid">
-                    <article class="proyectos-content-proyecto ">
-                        <div>
-                            <img src="assets/img/nosotros.jpg" alt="Proyecto 1">
-                            <h4 class="proyecto-title">Titulo Proyecto 1</h4>
-                            <p>Texto explicativo referente al proyecto 1</p>
-                        </div>
+                <div class="proyectos-main container grid">
+                    <article class="proyectos-main-proyecto ">
+
+                        <img src="assets/img/nosotros.jpg" alt="Proyecto 1">
+                        <h4 >Titulo Proyecto 1</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam sapiente tempore
+                            deserunt, velit, quas doloribus doloremque earum, culpa ratione eligendi saepe mollitia?
+                            Perferendis sapiente neque accusamus exercitationem, autem aliquid sed.</p>
+                        <a href="#" class="button">Demo ></a>
+
                     </article>
-                    <article class="proyectos-content-proyecto">
-                        <div>
-                            <img src="assets/img/nosotros.jpg" alt="Proyecto 2">
-                            <h4 class="proyecto-title">Titulo Proyecto 2</h4>
-                            <p>Texto explicativo referente al proyecto 2</p>
-                        </div>
+                    <article class="proyectos-main-proyecto">
+
+                        <img src="assets/img/nosotros.jpg" alt="Proyecto 2">
+                        <h4 >Titulo Proyecto 2</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam sapiente tempore
+                            deserunt, velit, quas doloribus doloremque earum, culpa ratione eligendi saepe mollitia?
+                            Perferendis sapiente neque accusamus exercitationem, autem aliquid sed.</p>
+                        <a href="#" class="button">Demo ></a>
+
                     </article>
-                    <article class="proyectos-content-proyecto">
-                        <div>
-                            <img src="assets/img/nosotros.jpg" alt="Proyecto 3">
-                            <h4 class="proyecto-title">Titulo Proyecto 3</h4>
-                            <p>Texto explicativo referente al proyecto 3</p>
-                        </div>
+                    <article class="proyectos-main-proyecto">
+
+                        <img src="assets/img/nosotros.jpg" alt="Proyecto 3">
+                        <h4 >Titulo Proyecto 3</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam sapiente tempore
+                            deserunt, velit, quas doloribus doloremque earum, culpa ratione eligendi saepe mollitia?
+                            Perferendis sapiente neque accusamus exercitationem, autem aliquid sed.</p>
+                        <a href="#" class="button">Demo ></a>
+
                     </article>
-                    <article class="proyectos-content-proyecto">
-                        <div>
-                            <img src="assets/img/nosotros.jpg" alt="Proyecto 4">
-                            <h4 class="proyecto-title">Titulo Proyecto 4</h4>
-                            <p>Texto explicativo referente al proyecto 4</p>
-                        </div>
+                    <article class="proyectos-main-proyecto">
+
+                        <img src="assets/img/nosotros.jpg" alt="Proyecto 4">
+                        <h4 >Titulo Proyecto 4</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam sapiente tempore
+                            deserunt, velit, quas doloribus doloremque earum, culpa ratione eligendi saepe mollitia?
+                            Perferendis sapiente neque accusamus exercitationem, autem aliquid sed.</p>
+                        <a href="#" class="button">Demo ></a>
+
                     </article>
                 </div>
             </section>
         </main>
         <!--Footer-->
-        <footer class="footer container">
+        <footer class="footer">
             <p>Todos los derechos reservados &#169; <span id="fecha"></span> | Easy Code Tech.</p>
         </footer>
         <script src="js/main.js"></script>
