--- a/nosotros.html
+++ b/nosotros.html
@@ -68,7 +68,7 @@
             </section>
         </main>
         <!--Footer-->
-        <footer class="footer container">
+        <footer class="footer">
             <p>Todos los derechos reservados &#169; <span id="fecha"></span> | Easy Code Tech.</p>
         </footer>
         <script src="js/main.js"></script>
