arreglos de css en las paginas

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Main (Contenido Principal)-->
         <main class="main">
             <!--Banner-->
-            <section class="banner section">
+            <section class="banner first-section section">
                 <div class="banner-content container grid">
                     <div class="banner">
                         <h1 class="banner-title">Bienvenidos a Easy Code</h1>
