--- a/nosotros.html
+++ b/nosotros.html
@@ -36,7 +36,7 @@
         <!-- Main (Contenido Principal)-->
         <main class="main">
             <!-- Sobre nosotros-->
-            <section class=" section">
+            <section class=" first-section section">
                 <div class=" container grid">
                     <h2 class="section-title">Sobre Nosotros</h2>
                     <div class="nosotros-main">
