--- a/proyectos.html
+++ b/proyectos.html
@@ -35,7 +35,7 @@
         <!-- Main (Contenido Principal)-->
         <main class="main">
             <!--Proyectos-->
-            <section class="proyectos section">
+            <section class="first-section section">
                 <h2 class="section-title">Proyectos</h2>
                 <div class="proyectos-main container grid">
                     <article class="proyectos-main-proyecto ">
