--- a/nosotros.html
+++ b/nosotros.html
@@ -1,88 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--Normalize CSS-->
-        <link rel="stylesheet" href="css/normalize.css">
-        <!--My Styles CSS-->
-        <link rel="stylesheet" href="css/main.css">
-        <title>Easy Code - ¿Quienes Somos?</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Normalize CSS-->
+    <link rel="stylesheet" href="css/normalize.css">
+    <!--My Styles CSS-->
+    <link rel="stylesheet" href="css/main.css">
+    <title>Easy Code - ¿Quienes Somos?</title>
+</head>
 
-    <body>
-        <!-- Header (logo y menu)-->
-        <header class="header">
-            <div class="nav container">
-                <a href="index.html" class="nav-logo">Easy Code</a>
-                <nav class="nav-menu" id="nav-menu">
-                    <ul class="nav-list grid">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link active-link" href="nosotros.html">¿Quienes Somos?</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="proyectos.html">Proyectos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                    </ul>
-                </nav>
-                <div class="nav-btns">
-                    <i class="fas fa-moon change-theme" id="theme-button"></i>
-                    <div class="nav-toggle" id="nav-toggle">
-                        <i class="fas fa-bars"></i>
-                    </div>
+<body>
+    <!-- Header (logo y menu)-->
+    <header class="header">
+        <div class="nav container">
+            <a href="index.html" class="nav-logo">Easy Code</a>
+            <nav class="nav-menu" id="nav-menu">
+                <ul class="nav-list grid">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link active-link" href="nosotros.html">¿Quienes Somos?</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="proyectos.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+            <div class="nav-btns">
+                <i class="fas fa-moon change-theme" id="theme-button"></i>
+                <div class="nav-toggle" id="nav-toggle">
+                    <i class="fas fa-bars"></i>
                 </div>
             </div>
-        </header>
-        <!-- Main (Contenido Principal)-->
-        <main class="main">
-            <!-- Sobre nosotros-->
-            <section class=" first-section section">
-                <div class=" container grid">
-                    <h2 class="section-title">Sobre Nosotros</h2>
-                    <div class="nosotros-main">
-                        <div class="nosotros-main-img">
-                            <img src="assets/img/nosotros.jpg" alt="">
-                        </div>
-                        <div class="nosotros-main-data">
-                            <h3>Misión</h3>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure id nobis sit voluptate
-                                optio,
-                                dolore sint nostrum sequi, non quo dolores quam voluptatibus, quae in ea at aut impedit
-                                nam.</p>
-                        </div>
-                        <div class="nosotros-main-data">
-                            <h3>Visión</h3>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure id nobis sit voluptate
-                                optio,
-                                dolore sint nostrum sequi, non quo dolores quam voluptatibus, quae in ea at aut impedit
-                                nam.</p>
-                        </div>
-                        <div class="nosotros-main-img">
-                            <img src="assets/img/nosotros.jpg" alt="">
-                        </div>
-                        <div class="nosotros-main-img">
-                            <img src="assets/img/nosotros.jpg" alt="">
-                        </div>
-                        <div class="nosotros-main-data">
-                            <h3>Historia</h3>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure id nobis sit voluptate
-                                optio,
-                                dolore sint nostrum sequi, non quo dolores quam voluptatibus, quae in ea at aut impedit
-                                nam.</p>
-                        </div>
+        </div>
+    </header>
+    <!-- Main (Contenido Principal)-->
+    <main class="main">
+        <!-- Sobre nosotros-->
+        <section class=" first-section section">
+            <div class=" container grid">
+                <h2 class="section-title">Sobre Nosotros</h2>
+                <div class="nosotros-main">
+                    <div class="nosotros-main-img">
+                        <img src="assets/img/nosotros.jpg" alt="">
                     </div>
-            </section>
-        </main>
-        <!--Footer-->
-        <footer class="footer">
-            <p>Todos los derechos reservados &#169; <span id="fecha"></span> | Easy Code Tech.</p>
-        </footer>
-        <!--Logica principal -->
-        <script src="js/main.js"></script>
+                    <div class="nosotros-main-data">
+                        <h3>Misión</h3>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure id nobis sit voluptate optio, dolore sint nostrum sequi, non quo dolores quam voluptatibus, quae in ea at aut impedit nam.
+                        </p>
+                    </div>
+                    <div class="nosotros-main-data">
+                        <h3>Visión</h3>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure id nobis sit voluptate optio, dolore sint nostrum sequi, non quo dolores quam voluptatibus, quae in ea at aut impedit nam.
+                        </p>
+                    </div>
+                    <div class="nosotros-main-img">
+                        <img src="assets/img/nosotros.jpg" alt="">
+                    </div>
+                    <div class="nosotros-main-img">
+                        <img src="assets/img/nosotros.jpg" alt="">
+                    </div>
+                    <div class="nosotros-main-data">
+                        <h3>Historia</h3>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure id nobis sit voluptate optio, dolore sint nostrum sequi, non quo dolores quam voluptatibus, quae in ea at aut impedit nam.
+                        </p>
+                    </div>
+                </div>
+        </section>
+    </main>
+    <!--Footer-->
+    <footer class="footer">
+        <p>Todos los derechos reservados &#169; <span id="fecha"></span> | Easy Code Tech.</p>
+    </footer>
+    <!--Logica principal -->
+    <script src="js/main.js"></script>
 
-        <!--Libreria de iconos FontAwesome-->
-        <script src="js/fontawesome.js" crossorigin="anonymous"></script>
-    </body>
+    <!--Libreria de iconos FontAwesome-->
+    <script src="js/fontawesome.js" crossorigin="anonymous"></script>
+</body>
 
 </html>
